[gd_scene load_steps=17 format=2]

[ext_resource path="res://scriptes/UI & util/UI.gd" type="Script" id=1]
[ext_resource path="res://sprites/coin.png" type="Texture" id=2]
[ext_resource path="res://sprites/pause.png" type="Texture" id=3]
[ext_resource path="res://scriptes/UI & util/MusicSlider.gd" type="Script" id=4]
[ext_resource path="res://sprites/grabber.png" type="Texture" id=5]
[ext_resource path="res://scriptes/UI & util/FXslider.gd" type="Script" id=6]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.607843, 0.607843, 0.607843, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.392157, 0.392157, 0.392157, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=13]
color = Color( 1, 1, 1, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
vertical = true

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.607843, 0.607843, 0.607843, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxLine" id=17]
color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=14]
resource_name = "start"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Time:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Shots:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Bounces:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "new bullet"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 2, 2, 2 ),
"update": 0,
"values": [ Vector2( 107.5, 83.5 ), Vector2( 107.5, 83.5 ), Vector2( 107.5, 63.5 ) ]
}

[node name="UI" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="."]
margin_right = 17.0
margin_bottom = 18.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CoinsText" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 307.0
margin_top = -181.0
margin_right = 319.0
margin_bottom = -168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 302, 7 )
texture = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -72.5
margin_right = 46.5
margin_bottom = 72.5
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.5
margin_top = -63.0
margin_right = 36.5
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="ColorRect2/VBoxContainer"]
margin_right = 73.0
margin_bottom = 15.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "Resume"

[node name="Restart" type="Button" parent="ColorRect2/VBoxContainer"]
margin_top = 19.0
margin_right = 73.0
margin_bottom = 34.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hub" type="Button" parent="ColorRect2/VBoxContainer"]
margin_top = 38.0
margin_right = 73.0
margin_bottom = 53.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "To hub"

[node name="MainMenu" type="Button" parent="ColorRect2/VBoxContainer"]
margin_top = 57.0
margin_right = 73.0
margin_bottom = 72.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "To main menu"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2/VBoxContainer"]
margin_top = 76.0
margin_right = 73.0
margin_bottom = 118.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FXvolume" type="Label" parent="ColorRect2/VBoxContainer/VBoxContainer"]
margin_right = 73.0
margin_bottom = 13.0
text = "FX volume:"

[node name="FXSlider" type="HSlider" parent="ColorRect2/VBoxContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 73.0
margin_bottom = 21.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 17 )
min_value = -30.0
max_value = 0.0
script = ExtResource( 6 )

[node name="MusicVolume" type="Label" parent="ColorRect2/VBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 73.0
margin_bottom = 34.0
text = "Music volume:"

[node name="MusicSlider" type="HSlider" parent="ColorRect2/VBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 73.0
margin_bottom = 42.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 17 )
min_value = -30.0
max_value = 0.0
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect4" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -90.0
margin_right = 100.0
margin_bottom = 90.0
color = Color( 0, 0, 0, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect4"]
visible = false
margin_left = 76.0
margin_top = 122.5
margin_right = 200.0
margin_bottom = 135.5
text = "no more levels for you("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = 16.5
margin_right = 91.0
margin_bottom = 31.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hub" type="Button" parent="ColorRect4/HBoxContainer"]
margin_right = 47.0
margin_bottom = 15.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = " To hub "

[node name="Restart" type="Button" parent="ColorRect4/HBoxContainer"]
margin_left = 57.0
margin_right = 108.0
margin_bottom = 15.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = " Restart "

[node name="NextLevel" type="Button" parent="ColorRect4/HBoxContainer"]
margin_left = 118.0
margin_right = 182.0
margin_bottom = 15.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_pressed = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = " Next level "

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect4"]
margin_left = 10.0
margin_top = 56.0
margin_right = 190.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="ColorRect4/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 180.0
margin_bottom = 13.0
text = "Time: "

[node name="Shots" type="Label" parent="ColorRect4/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 17.0
margin_right = 180.0
margin_bottom = 30.0
text = "Shots: "

[node name="Bounces" type="Label" parent="ColorRect4/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 34.0
margin_right = 180.0
margin_bottom = 47.0
text = "Bounces: "

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect4"]
anims/start = SubResource( 14 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.5
margin_top = -22.5
margin_right = 115.5
margin_bottom = 22.5
text = "Congratulations! You have passed the game!

        press any key to continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.54
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -6.5
margin_right = 52.5
margin_bottom = 6.50003
text = "new bullet accessed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/new bullet" = SubResource( 16 )

[connection signal="mouse_entered" from="Pause" to="." method="_on_Pause_mouse_entered"]
[connection signal="mouse_exited" from="Pause" to="." method="_on_Pause_mouse_exited"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/Hub" to="." method="_on_Hub_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="value_changed" from="ColorRect2/VBoxContainer/VBoxContainer/FXSlider" to="ColorRect2/VBoxContainer/VBoxContainer/FXSlider" method="_on_FXSlider_value_changed"]
[connection signal="value_changed" from="ColorRect2/VBoxContainer/VBoxContainer/MusicSlider" to="ColorRect2/VBoxContainer/VBoxContainer/MusicSlider" method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="ColorRect4/HBoxContainer/Hub" to="." method="_on_Hub_pressed"]
[connection signal="pressed" from="ColorRect4/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="ColorRect4/HBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
